# tdsp_template_grupo21

./: .gitignore  pyproject.toml  requirements.txt
data/: README.md
data/processed/: .gitkeep  declaraciones_consolidadas.csv
data/processed/corpus_juridico_md/: Dirección de Impuestos y Aduanas Nacionales, Concepto nro. 003589 de 01-02-2020.md  Dirección de Impuestos y Aduanas Nacionales, Concepto nro. 0479 de 01-03-2024.md  Dirección de Impuestos y Aduanas Nacionales, Concepto nro. 10316 de 01-04-2019.md  Dirección de Impuestos y Aduanas Nacionales, Concepto nro. 1089 de 01-10-2023.md  Dirección de Impuestos y Aduanas Nacionales, Concepto nro. 131 de 01-01-2023.md  (+73 more)
data/raw/: .gitkeep
data/results/: .gitkeep  classification_reports.txt  model_results.csv
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_preprocessing.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  model_report.md  model_results_report.md
outputs/: .gitkeep
outputs/figures/: .gitkeep
scripts/data_acquisition/: main.py
scripts/deployment/: .huggingface.yml  api.py  best_model.joblib  dockerfile  requirements.txt  scaler.pkl  schemas.py
scripts/eda/: advanced_eda.py  generate_data_dictionary.py  generate_data_report.py  generate_data_summary.py  generate_profile_report.py  main.py  save_eda_images.py  update_data_summary.py
scripts/preprocessing/: preprocess_data.py
scripts/training/: train_models.py
src/diagnostico_tributario/: procesador.py
